src/test/RedefinedSymbol/RedefinedSymbol.expected
error: RedefinedSymbol.panda:5:5: invalid redefinition of symbol 'length'
1 error
