src/test/RedefinedSymbol/RedefinedSymbol.panda
class RedefinedSymbol {
    @private
    var length:Int := 5

    function length():Int {
        return 2
    }
}